inventory/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
